creado login en spring

--- a/src/main/resources/templates/ListadoVehiculo.html
+++ b/src/main/resources/templates/ListadoVehiculo.html
@@ -29,7 +29,7 @@
                 <tr>
                     <td>
 
-                    <a href="ClienteNoValido.html">
+                    <a href="AnadirVehiculo">
                     <img alt="Prueba de imagen" 
                     src="https://png.pngtree.com/png-vector/20230104/ourmid/pngtree-3d-cross-x-icon-vector-in-transparent-background-png-image_6550459.png" 
                     width="30" height="30">
@@ -118,8 +118,8 @@
         <br>
     
         <div class="buttons-container">
-        <a href="ListadoGuerrero"> guerreros</a>
-            <input  type="submit" value="Añadir Vehiculo" >
+
+            <input  type="submit" onclick="window.location.href='AnadirVehiculo'"value="Añadir Vehiculo" >
             <input type="submit" value="Iniciar Combate">
         </div>
     </body>
